[gd_scene load_steps=11 format=3 uid="uid://x4irp115byoq"]

[ext_resource type="Script" path="res://Scripts/eye.gd" id="1_ry2ey"]
[ext_resource type="Texture2D" uid="uid://nk3iav61wj6s" path="res://Sprites/eye-placeholder.png" id="1_yj4qx"]

[sub_resource type="AtlasTexture" id="AtlasTexture_4vj06"]
atlas = ExtResource("1_yj4qx")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gcl1u"]
atlas = ExtResource("1_yj4qx")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fvegf"]
atlas = ExtResource("1_yj4qx")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8a1pb"]
atlas = ExtResource("1_yj4qx")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_edtas"]
atlas = ExtResource("1_yj4qx")
region = Rect2(128, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_bcs7j"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4vj06")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gcl1u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fvegf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8a1pb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_edtas")
}],
"loop": false,
"name": &"die",
"speed": 7.0
}]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_nreci"]
height = 1.72151

[sub_resource type="BoxShape3D" id="BoxShape3D_f8gxs"]
size = Vector3(1, 2, 2)

[node name="Eye" type="CharacterBody3D"]
collision_layer = 3
collision_mask = 3
script = ExtResource("1_ry2ey")
stun_color = Color(0.682353, 0, 1, 1)

[node name="Anim" type="AnimatedSprite3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(4, 0, 0, 0, 4, 0, 0, 0, 4, 0, 1.2, 0)
billboard = 2
texture_filter = 0
sprite_frames = SubResource("SpriteFrames_bcs7j")
autoplay = "default"

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.865, 0)
shape = SubResource("CapsuleShape3D_nreci")

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.865, -0.5)
shape = SubResource("BoxShape3D_f8gxs")

[node name="ImmobileTimer" type="Timer" parent="."]

[node name="StunSound" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
bus = &"SFX"

[connection signal="animation_finished" from="Anim" to="." method="_on_anim_animation_finished"]
[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="timeout" from="ImmobileTimer" to="." method="_on_ImmobileTimer_timeout"]
